logs/ptml.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ptml'...
Compiling './lib/python3.5/site-packages/ptml/PTMLHTTPServer.py'...
***   File "./lib/python3.5/site-packages/ptml/PTMLHTTPServer.py", line 53
    except SystemExit, code:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ptml/TemplateParser.py'...
***   File "./lib/python3.5/site-packages/ptml/TemplateParser.py", line 183
    except UnicodeError, _err:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ptml-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/ptml-0.4.0'...
Listing './share/ptml-0.4.0/benchmark'...
Compiling './share/ptml-0.4.0/benchmark/client.py'...
***   File "./share/ptml-0.4.0/benchmark/client.py", line 70
    print "hits:\t\t%s" % hits
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './share/ptml-0.4.0/benchmark/httpd.py'...
Listing './share/ptml-0.4.0/contrib'...
Compiling './share/ptml-0.4.0/contrib/ptmlcgi.py'...
***   File "./share/ptml-0.4.0/contrib/ptmlcgi.py", line 51
    except SystemExit, code:
                     ^
SyntaxError: invalid syntax

Listing './share/ptml-0.4.0/doc'...
Listing './share/ptml-0.4.0/testsuite'...
Compiling './share/ptml-0.4.0/testsuite/regress.py'...
***   File "./share/ptml-0.4.0/testsuite/regress.py", line 83
    print "%s: ok" % testname
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share/python-wheels'...
